--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 ---
 name: BirthdaysPE
 version: 1.0.0
-main: MCA7\BirthdaysPE\BirthdaysPE
+main: MCA7\BirthdaysPE
 api: 4.0.0
 src-namespace-prefix: MCA7\BirthdaysPE
 
