--- a/resources/config.yml
+++ b/resources/config.yml
@@ -30,3 +30,23 @@ birthday-announcing-msg: "§aGood day §f{player}§e! §aToday is §b{birthdaybo
 
 birthday-msg-to-player: "§b§lHappy Birthday §e{birthdayboi}§a!"
 
+database:
+  # The database type. "sqlite" and "mysql" are supported.
+  type: sqlite
+
+  # Edit these settings only if you choose "sqlite".
+  sqlite:
+    # The file name of the database in the plugin data folder.
+    # You can also put an absolute path here.
+    file: sqlite.sql
+  # Edit these settings only if you choose "mysql".
+  mysql:
+    host: 127.0.0.1
+    # Avoid using the "root" user for security reasons.
+    username: root
+    password: ""
+    schema: prisons
+  # The maximum number of simultaneous SQL queries
+  # Recommended: 1 for sqlite, 2 for MySQL. You may want to further increase this value if your MySQL connection is very slow.
+  worker-limit: 1
+
